--- a/website/assets/styles/pages/handbook/basic-handbook.less
+++ b/website/assets/styles/pages/handbook/basic-handbook.less
@@ -190,7 +190,6 @@
     }
     p {
       font-family: @header-font;
-      font-size: 14px;
     }
     ul {
       list-style-type: disc;
